--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,162 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <build>
+  <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>sql-maven-plugin</artifactId>
+        <version>1.5</version>
+ 
+        <dependencies>
+                <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>5.1.9</version>
+                </dependency>
+        </dependencies>
+ 
+        <configuration>
+          <driver>com.mysql.jdbc.Driver</driver>
+          <url>jdbc:mysql://localhost:3306/sonar</url>
+          <username>root</username>
+          <password></password>
+        </configuration>
+ 
+        <executions>
+          <execution>
+            <id>drop-table</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>execute</goal>
+            </goals>
+            <configuration>
+              <autocommit>true</autocommit>
+              <sqlCommand>DROP TABLE IF EXISTS person</sqlCommand>
+            </configuration>
+          </execution>
+ 
+          <execution>
+            <id>create-table</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>execute</goal>
+            </goals>
+            <configuration>
+              <autocommit>true</autocommit>
+              <srcFiles>
+                <srcFile>src/main/sql/schema.sql</srcFile>
+              </srcFiles>
+            </configuration>
+          </execution>
+ 
+          <execution>
+            <id>insert-data</id>
+            <phase>process-test-resources</phase>
+            <goals>
+              <goal>execute</goal>
+            </goals>
+            <configuration>
+              <orderFile>ascending</orderFile>
+              <fileset>
+                <basedir>${basedir}</basedir>
+                <includes>
+                  <include>src/test/sql/test-data.sql</include>
+                </includes>
+              </fileset>
+            </configuration>
+          </execution>
+ 
+        </executions>
+      </plugin>
+      
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-failsafe-plugin</artifactId>
+      <version>2.19.1</version>
+      <executions>
+        <execution>
+          <goals>
+            <goal>integration-test</goal>
+            <goal>verify</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+    </plugins>
+  </build>
+  <reporting>
+    <plugins>
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jxr-plugin</artifactId>
+      <version>2.5</version>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-javadoc-plugin</artifactId>
+      <version>2.10.3</version>
+      <configuration>
+        <additionalparam>-Xdoclint:none</additionalparam>
+      </configuration>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-report-plugin</artifactId>
+      <version>2.19.1</version>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-checkstyle-plugin</artifactId>
+      <version>2.17</version>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-pmd-plugin</artifactId>
+      <version>3.6</version>
+      <configuration>
+        <skipEmptyReport>false</skipEmptyReport>
+        <linkXref>true</linkXref>
+        <minimumTokens>50</minimumTokens>
+        <rulesets>
+          <ruleset>rulesets/java/android.xml</ruleset>
+          <ruleset>rulesets/java/basic.xml</ruleset>
+          <ruleset>rulesets/java/braces.xml</ruleset>
+          <ruleset>rulesets/java/clone.xml</ruleset>
+          <ruleset>rulesets/java/codesize.xml</ruleset>
+          <ruleset>rulesets/java/comments.xml</ruleset>
+          <ruleset>rulesets/java/coupling.xml</ruleset>
+          <ruleset>rulesets/java/design.xml</ruleset>
+          <ruleset>rulesets/java/empty.xml</ruleset>
+          <ruleset>rulesets/java/finalizers.xml</ruleset>
+          <ruleset>rulesets/java/imports.xml</ruleset>
+          <ruleset>rulesets/java/j2ee.xml</ruleset>
+          <ruleset>rulesets/java/javabeans.xml</ruleset>
+          <ruleset>rulesets/java/junit.xml</ruleset>
+          <ruleset>rulesets/java/logging-jakarta-commons.xml</ruleset>
+          <ruleset>rulesets/java/logging-java.xml</ruleset>
+          <ruleset>rulesets/java/migrating.xml</ruleset>
+          <ruleset>rulesets/java/migrating_to_13.xml</ruleset>
+          <ruleset>rulesets/java/migrating_to_14.xml</ruleset>
+          <ruleset>rulesets/java/migrating_to_15.xml</ruleset>
+          <ruleset>rulesets/java/migrating_to_junit4.xml</ruleset>
+          <ruleset>rulesets/java/naming.xml</ruleset>
+          <ruleset>rulesets/java/optimizations.xml</ruleset>
+          <ruleset>rulesets/java/strictexception.xml</ruleset>
+          <ruleset>rulesets/java/strings.xml</ruleset>
+          <ruleset>rulesets/java/sunsecure.xml</ruleset>
+          <ruleset>rulesets/java/typeresolution.xml</ruleset>
+          <ruleset>rulesets/java/unnecessary.xml</ruleset>
+          <ruleset>rulesets/java/unusedcode.xml</ruleset>
+        </rulesets>
+      </configuration>
+    </plugin>
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>findbugs-maven-plugin</artifactId>
+      <version>3.0.0</version>
+    </plugin>
+  </plugins>
+</reporting>
 </project>
